--- a/Public/admin/member.html
+++ b/Public/admin/member.html
@@ -353,9 +353,12 @@
                             <input type="text" class="form-control" id="english" name="english">
                         </div>
                         <label class="col-sm-1 control-label">类别</label>
-
                         <div class="col-sm-5">
-                            <input type="text" class="form-control" id="category">
+                            <select class="form-control" id="category" name="category">
+                                <option>管理团队</option>
+                                <option>专业团队</option>
+                                <option>合伙人</option>
+                            </select>
                         </div>
                     </div>
                     <div class="form-group">
