--- a/Public/home/contact.html
+++ b/Public/home/contact.html
@@ -163,7 +163,7 @@
 <style>
     #city_list{
         text-align: center;
-        height: 27px;
+        height: 30px;
         border-bottom: 2px #f4f4f4 solid;
     }
     ul li a{
@@ -189,6 +189,7 @@
     }
 
     .city_name {
+        padding-bottom: 4px;
         color: #000000 !important;
         /*display: block;
         margin-right: 0;
@@ -355,8 +356,10 @@
     </div>
 </div>
 <div class="container" style="margin-top: 10px;">
-    <div class="row" style="padding-left: 5%">
-        <div class="col-lg-4 col-lg-offset-4" id="city_list"></div>
+    <div class="row" >
+        <table style="margin: 0 auto">
+            <tr><td>
+        <div class="" style="margin: 0 auto" id="city_list"></div></td></tr></table>
     </div>
 </div>
 <div class="container" id="city" style="margin-top: 0px;">
