--- a/Public/home/abort.html
+++ b/Public/home/abort.html
@@ -131,7 +131,7 @@
                 success: function (r) {
                     var length = r.msg.length;
                     for (var i = 0; i < length; i++) {
-                        $('#menu').append("<div class='menu' style='width: 180px;' onclick='menu_detail(this," + r.msg[i].id + ")'>" + r.msg[i].menu + "<br><span style='font-size: 12px'>" + r.msg[i].english + "</span></div>");
+                        $('#menu').append("<div class='menu' style='width: 180px;' onclick='menu_detail(this," + r.msg[i].id + ")'>" + r.msg[i].menu + "<br><span style='font-size: 12px'>" + r.msg[i].menu_en + "</span></div>");
                     }
                 }
             });
