--- a/Public/home/team.html
+++ b/Public/home/team.html
@@ -228,6 +228,7 @@
                     }
                     var height = $(document.body).height();
                     $('#mask').height(height);
+                    $('#category').children().last().remove();
                 }
             });
             $.ajax({
@@ -274,6 +275,7 @@
                     }
                     var height = $(document.body).height();
                     $('#mask').height(height);
+                    $('#category').children().last().remove();
                 }
             });
             $.ajax({
