--- a/Public/home/team.html
+++ b/Public/home/team.html
@@ -223,8 +223,14 @@
                 success: function (r) {
                     var len = r.msg.length;
                     for (var i = 0; i < len; i++) {
-                        $('#category').append("<div class='col-lg-1'><p class='p1' onclick='search(this)' id='p1'>"+r.msg[i].category_en+"</p><p class='p2'></p>" +
-                        "</div><div style='width: 1px;height: 15px;background-color: #4c4c4c;float: left;margin-top: 5px;'></div>");
+                        if (r.msg[i].category_en == 'Partner') {
+                            $('#category').append("<div class='' style='float: left'><p class='p1' style='color: #9b761d' onclick='search(this)' id='p1'>" + r.msg[i].category_en + "</p><p class='p2' style='display: block'></p>" +
+                            "</div><div style='width: 1px;height: 15px;background-color: #4c4c4c;float: left;margin-top: 5px;margin-left: 15px;margin-right: 15px;'></div>");
+                        }else{
+                            $('#category').append("<div class='' style='float: left'><p class='p1' onclick='search(this)' id='p1'>" + r.msg[i].category_en + "</p><p class='p2'></p>" +
+                            "</div><div style='width: 1px;height: 15px;background-color: #4c4c4c;float: left;margin-top: 5px;margin-left: 15px;margin-right: 15px;'></div>");
+                        }
+
                     }
                     var height = $(document.body).height();
                     $('#mask').height(height);
@@ -236,7 +242,7 @@
                 "dataType": 'json',
                 "data": {
                     status: 1,
-                    "w":'Partner'
+                    "w": 'Partner'
                 },
                 success: function (r) {
                     var len = r.msg.length;
@@ -270,8 +276,13 @@
                 success: function (r) {
                     var len = r.msg.length;
                     for (var i = 0; i < len; i++) {
-                        $('#category').append("<div class='col-lg-1'><p class='p1' onclick='search(this)' id='p1'>"+r.msg[i].category+"</p><p class='p2'></p>" +
-                        "</div><div style='width: 1px;height: 15px;background-color: #4c4c4c;float: left;margin-top: 5px;'></div>");
+                        if (r.msg[i].category == '合伙人') {
+                            $('#category').append("<div class='' style='float: left'><p class='p1' style='color: #9b761d' onclick='search(this)' id='p1'>" + r.msg[i].category + "</p><p class='p2' style='display: block'></p>" +
+                            "</div><div style='width: 1px;height: 15px;background-color: #4c4c4c;float: left;margin-top: 5px;margin-left: 15px;margin-right: 15px;'></div>");
+                        }else{
+                            $('#category').append("<div class='' style='float: left'><p class='p1' onclick='search(this)' id='p1'>" + r.msg[i].category + "</p><p class='p2'></p>" +
+                            "</div><div style='width: 1px;height: 15px;background-color: #4c4c4c;float: left;margin-top: 5px;margin-left: 15px;margin-right: 15px;'></div>");
+                        }
                     }
                     var height = $(document.body).height();
                     $('#mask').height(height);
@@ -280,8 +291,8 @@
             });
             $.ajax({
                 "url": '/home/index/member',
-                "data":{
-                    "w":'合伙人'
+                "data": {
+                    "w": '合伙人'
                 },
                 "dataType": 'json',
                 success: function (r) {
@@ -339,10 +350,10 @@
 
     function search(id) {
         var w = $(id).text();
-        $('.p1').css('color','#4c4c4c');
-        $('.p1').next().css('display','none');
-        $(id).css('color','#9b761d');
-        $(id).next().css('display','block');
+        $('.p1').css('color', '#4c4c4c');
+        $('.p1').next().css('display', 'none');
+        $(id).css('color', '#9b761d');
+        $(id).next().css('display', 'block');
         $('#imgs').empty();
         $.ajax({
             "url": '/home/index/member',
@@ -563,11 +574,16 @@
 
     <div class="col-lg-4" style="text-align:center;margin-top: 50px;">
         <img id="member_img" style="margin: 0 auto; width: 250px;height: 190px;"/>
-        <div class="col-lg-11" style="text-align: center;margin-top: 20px;"><span id="name" style="font-size: 24px;color: #4c4c4c;"></span></div>
-        <div class="col-lg-11" style="text-align: center"><span id="en_name" style="font-size: 14px;color: #4c4c4c;"></span>
+
+        <div class="col-lg-11" style="text-align: center;margin-top: 20px;"><span id="name"
+                                                                                  style="font-size: 24px;color: #4c4c4c;"></span>
+        </div>
+        <div class="col-lg-11" style="text-align: center"><span id="en_name"
+                                                                style="font-size: 14px;color: #4c4c4c;"></span>
 
         </div>
-        <div class="col-lg-11 exit" style="text-align: center;margin-top: 15px;"><span id="position" style="font-size: 14px;color: #4c4c4c;"></span>
+        <div class="col-lg-11 exit" style="text-align: center;margin-top: 15px;"><span id="position"
+                                                                                       style="font-size: 14px;color: #4c4c4c;"></span>
         </div>
     </div>
     <div class="col-lg-8" style="padding: 0;margin-top:0px;width: 64% !important;">
